@@ -1,3 +1,7 @@
+* 2007-07-11 - manuel.kraft@open-xchange.com
+
+ - Bugfix ID#8400 listresource: attribute available not in csv output
+
 * 2007-07-11 - choeger@open-xchange.com
 
  - Bugfix ID#8397 listgroup: "email" in csv output
